@@ -1,5 +1,10 @@
 2005-02-23  Nick Clifton  <nickc@redhat.com>
 
+	* elf32-m68hc1x.c (elf32_m68hc11_relocate_section): Initialise
+	variables that are passed by reference to
+	m68hc11_get_relocation_value in case that function does not
+	initialise them.
+
 	* elf32-cr16c.c (cr16c_elf_final_link_relocate): Remove duplicated
 	return statements and replace with a single return at the end of
 	the function.  This helps pacify the flow analysis code in gcc 4.0.
